# TabEmbedBench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/: example_result.py
notebooks/: comparison_embeddings.py  experiment_tabicl.py  outlier_visualization.py  sphere_model.py  tabarena_visualization.py  tabicl_grid_experiements.py
src/benchmark/: benchmark_utils.py  outlier_detection_algorithms.py
src/embedding_model/: base.py
src/embedding_model/tabicl/: tabicl_utils.py
src/embedding_model/tabpfn/: tabpfn_utils.py
src/embedding_models/: base.py  tabicl_utils.py  tabpfn_utils.py
src/embedding_models/tabpfn/: tabpfn_utils.py
src/embeddings/tabicl/: tabicl_utils.py
src/outlier_algo/: outlier_detection_algorithms.py
src/tabembedbench/: README.md  constants.py
src/tabembedbench/benchmark/: README.md  __init__.py  abstract_benchmark.py  benchmark_utils.py  constants.py  dataset_separation_benchmark.py  dset_benchmark.py  multi_tabarena_benchmark.py  outlier_benchmark.py  run_benchmark.py  single_dataset_benchmark.py  tabarena_benchmark.py
src/tabembedbench/embedding_models/: Schalenmodell.py  __init__.py  abstractembedding.py  base.py  contexttab_embedding.py  readme.md  sphere_model.py  spherebased_embedding.py  spherebasedembedding_utils.py  tabicl_clustering_embedding.py  tabicl_embedding.py  tabicl_utils.py  tablevectorizer_embedding.py  tabpfn_embedding.py  tabpfn_utils.py  tabstar_embedding.py  tabvectorizer_embedding.py  tfm_helper.py
src/tabembedbench/evaluators/: README.md  __init__.py  abstractevaluator.py  classifier.py  knn_classifier.py  knn_regressor.py  logistic_regression.py  mlp_classifier.py  mlp_evaluator.py  mlp_regressor.py  outlier.py  regression.py  svm_classifier.py
src/tabembedbench/evaluators/classification/: __init__.py  knn_classifier.py  logistic_regression.py  mlp_classifier.py  svm_classifier.py
src/tabembedbench/evaluators/regression/: __init__.py  knn_regressor.py  mlp_regressor.py
src/tabembedbench/examples/: .env.example  README.md  cd.py  ecml_pdkk_run.py  ecml_pkdd_run.py  eda_utils.py  eurips_run.py  ijcai_run.py  mlp_parameter_run.py  sphere_model_run.py
src/tabembedbench/examples/ijcai_runs/: dataset_separation_tabarena.json  dataset_separation_tabarena_tabpfn_subset.json  ijcai_run_contexttab.py  ijcai_run_sphere.py  ijcai_run_sphere_tabicl.py  ijcai_run_tabpfn_embedding.py  ijcai_run_tabstar.py  ijcai_time.py
src/tabembedbench/outlier_algo/: outlier_detection_algorithms.py
src/tabembedbench/sphere_model/: __init__.py  spheremodel.py  spheremodel_arf.py  spheremodel_fho.py
src/tabembedbench/text_model/: __init__.py  textmodel.py
src/tabembedbench/utils/: README.md  dataset_separation_generator.py  dataset_utils.py  eda_utils.py  embedding_utils.py  exception_utils.py  logging_utils.py  plot_utils.py  preprocess_utils.py  shellmodel.py  torch_utils.py  tracking_utils.py  unsupervised_metrics.py  visualization_utils.py
src/universal_tab_embedding/: universaltabularembedding.py
src/utils/: benchmark_utils.py  config.py  dataset_utils.py  embedding_utils.py  plot_utils.py  preprocess_utils.py  shellmodel.py  tabicl_utils.py  tabpfn_utils.py
tests/: conftest.py
tests/test_embedding_models/: test_abstract_embedding.py
tests/test_evaluators/: test_abstract_evaluator.py
