[project]
name = "tabembedbench"
dynamic = ["version"]
description = "A comprehensive benchmarking framework for evaluating tabular data embedding on outlier detection and classification/regression tasks using ADBench and TabArena datasets"
requires-python = ">=3.11"
authors = [
    { name = "Lars Kleinemeier" },
    { name = "Frederik Hoppe" }
]
dependencies = [
    "liac-arff==2.5.0",
    "polars>=1.32.2",
    "scikit-learn>=1.6.1",
    "tabicl>=0.1.3",
    "tabpfn>=2.1.2",
    "torch>=2.2,<3",
    "huggingface-hub>=0.34.4",
    "openml>=0.15.1",
    "skrub>=0.6.1",
    "tabpfn-extensions[all]",
    "click>=8.2.1",
    "ray>=2.49.2",
    "optuna>=4.5.0",
    "pyod>=2.0.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle (docstrings)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie (unnecessary code)
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105",  # Missing docstrings
    "S101", # Use of assert
    "N803", "N806",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = []

[tool.uv.sources]
tabpfn-extensions = { git = "https://github.com/PriorLabs/tabpfn-extensions.git" }

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
