[project]
name = "tabembedbench"
dynamic = ["version"]
description = "A benchmarking framework for evaluating tabular data embedding on outlier detection and classification/regression tasks using ADBench and TabArena datasets"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Lars Kleinemeier" },
    { name = "Frederik Hoppe" }
]
dependencies = [
    "liac-arff==2.5.0",
    "polars>=1.32.2",
    "scikit-learn>=1.6.1",
    "tabicl>=0.1.4",
    "tabpfn>=2.1.2",
    "torch>=2.2,<3",
    "huggingface-hub>=0.34.4",
    "openml>=0.15.1",
    "skrub>=0.6.1",
    "click>=8.2.1",
    "optuna>=4.5.0",
    "pyod>=2.0.5",
    "seaborn>=0.13.2",
    "python-dotenv>=1.1.1",
    "aeon>=1.3.0",
    "marimo>=0.16.5",
    "pandas>=2.3.1",
    "ty>=0.0.1a33",
    "black>=25.12.0",
    "basedpyright>=1.36.1",
    "tabstar>=1.1.10",
    "pydantic>=2.12.5",
    "tqdm>=4.67.1",
]

[tool.uv]
# Lock for the platforms your team uses, but keep Python pinned to 3.12
# so compiled wheels (like tokenizers) are consistently available.
environments = [
  "sys_platform == 'darwin' and python_version >= '3.12' and python_version < '3.14'",
  "sys_platform == 'linux'  and python_version >= '3.12' and python_version < '3.14'",
  "sys_platform == 'win32'  and python_version >= '3.12' and python_version < '3.14'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "D",
    "UP",
    "B",
    "S",
    "C4",
    "PIE",
    "SIM",
    "RET",
    "ARG",
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105",
    "S101",
    "N803", "N806",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = []

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
